name:                99haskell
version:             0.0.1
synopsis:            Live Haskell coding problems
license:             MIT
author:              Bram Hoskin
maintainer:          hello@bram.gg
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable 99haskell
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8
                       , scotty >=0.9 && <0.10
                       , scotty-session >=0.0 && <0.1
                       , wai-extra >=3.0 && <3.1
                       , process >=1.2 && <1.3
                       , cgi >=3001.2 && <3001.3
                       , text >=1.2 && <1.3
                       , async >=2.0 && <2.1
                       , directory >=1.2 && <1.3
                       , aeson >=0.8 && <0.9
                       , containers >=0.5 && <0.6
                       , blaze-html >=0.7 && <0.8
                       , clay >=0.10 && <0.11
  default-language:    Haskell2010
